[project]
name = "llm-openai-codex"
version = "0.3.0"
description = "Access OpenAI models via a Codex subscription"
readme = "README.md"
authors = [
    {name = "llm-openai-codex contributors"},
    {name = "Simon Willison"},
    {name = "Radoslaw Stachowiak"},
]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "llm",
    "openai>=2.31.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/rdslw/llm-openai-codex"
Changelog = "https://github.com/rdslw/llm-openai-codex/releases"
Issues = "https://github.com/rdslw/llm-openai-codex/issues"
CI = "https://github.com/rdslw/llm-openai-codex/actions"

[project.entry-points.llm]
codex = "llm_openai_codex"

[dependency-groups]
dev = ["pytest"]
